minikube/zipkin-pod-1.yml
apiVersion: v1
kind: Pod
metadata: 
  name: zipkin-pod
  namespace: autumn-dev
  labels: 
    app: zipkin-pod
spec: 
  containers: 
    - name: zipkin-container
      image: openzipkin/zipkin 
      ports: 
        - containerPort: 9411
