minikube/zipkin-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9411
  selector:
    app: zipkin
---
