minikube/zipkin-service-ext.yml
apiVersion: v1
kind: Service
metadata: 
  name: zipkin-service
  namespace: autumn-dev
  labels: 
    app: zipkin-service
spec: 
  type: LoadBalancer
  ports: 
    - name: http
      protocol: TCP
      targetPort: 9411
      port: 8080
  selector: 
    app: zipkin-pod
