minikube/zipkin-servie.yml
apiVersion: v1
kind: Service
metadata: 
  name: zipkin-service
  namespace: autumn-dev
  labels: 
    app: zipkin-service
spec: 
  type: NodePort
  ports: 
    - targetPort: 9411
      port: 80
  selector: 
    app: zipkin-pod
