minikube/echo.yml
apiVersion: v1
kind: Pod
metadata: 
  name: echo-pod
  namespace: default
  labels: 
    app: echo-pod
spec: 
  containers: 
    - name: echo-container
      image: ealen/echo-server 
      ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: echo-service
  namespace: default
  labels: 
    app: echo-service
spec: 
  type: ClusterIP
  ports: 
    - targetPort: 80
      port: 8080
  selector: 
    app: echo-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: echo-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  number: 8080
            path: /
