minikube/zipkin-svc-ingress.yml
apiVersion: v1
kind: Service
metadata: 
  name: zipkin-service
  namespace: autumn-dev
  labels: 
    app: zipkin-service
spec: 
  type: NodePort
  ports: 
    - targetPort: 9411
      port: 8080
  selector: 
    app: zipkin-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: zipkin-ingress
  namespace: autumn-dev
spec:
  rules:
  - http:
      paths:
        - path: /zipkin
          backend:
            service: 
              name: zipkin-service
              port: 
                number: 8080
          pathType: Prefix
